some fix in style on mobile size

--- a/src/asstes/style/layouts/home.css
+++ b/src/asstes/style/layouts/home.css
@@ -196,7 +196,7 @@
         font-size: 16px;
     }
     .product-slider-add-to-cart{
-        padding: 5px;
-        font-size: 12px;
+        padding: 5px !important;
+        font-size: 12px !important;
     }
 }
